Populated webpage and taken live

--- a/test.html
+++ b/test.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Document</title>
+    <h1> This is my test document. Created On VS Code</h1>
 </head>
 <body>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam laudantium nihil consectetur impedit rem excepturi ipsum inventore perspiciatis ratione. Laudantium necessitatibus, provident suscipit eligendi molestiae maiores quos magnam vitae neque.
+        Test text 1
     </p>
+    <ul>
+        <li>Try</li>
+        <li>List</li>
+        <li>Objects</li>
+    </ul>
+    
 </body>
 </html>
